--- a/nalit/scss/custom/_details.scss
+++ b/nalit/scss/custom/_details.scss
@@ -23,6 +23,7 @@
 
     .list {
         height: 87%;
+        overflow-x: hidden;
         overflow-y: scroll;
     }
 
